sonar issue fix
Issue-ID: SDC-1561
Change-Id: Iafb752fa6302ef53055d1f96e73d7eb4d7518603
Signed-off-by: Arindam Mondal <arind.mondal@samsung.com>